--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,13 @@
+// Variables först för att alla andra filer 
+// ska kunna ha använding av variablarna.
 @import "variables.scss";
+// grundpelarna på hemsidan. (html, body, ul a och mera).
 @import "base.scss";
-@import "header.scss";
+// Återställ paddings och margins samt sätter box-sizing på alla element
 @import "reset.scss";
+
+// Alla gruppmedlemmars uppgifter
+@import 'header.scss';
+@import 'item-list.scss';
+@import 'payment.scss';
+@import 'footer.scss';
