--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,22 @@ html, body {
     position: relative;
     width: 100%;
     background: $background-color;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul, li {
+    list-style-type: none;
 }
 
 header,
@@ -12,3 +28,16 @@ footer {
     width: 100%;
     position: relative;
 }
+
+main {
+    width: 100%;
+
+    .main-document {
+        border: solid 3px $primary-color;
+        box-shadow: 0 0 .5rem $box-shadow;
+        border-radius: .5rem;
+        padding: .5rem;
+    }
+
+}
+
