--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,7 @@
-$primary-color: #ff7b08;
+$primary-color: #83C623;
+$primary-color-dark: #3c5a11;
 $background-color: #fff;
 
 $box-shadow: #0000005e;
+
+$padding: 0 2rem
