--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,52 @@ footer {
 main {
   width: 100%; }
   main .main-document {
-    border: solid 3px #ff7b08;
+    border: solid 3px #83C623;
     box-shadow: 0 0 0.5rem #0000005e;
     border-radius: .5rem;
     padding: .5rem; }
+
+.button-primary {
+  height: 32px;
+  padding: .5rem 2rem;
+  border-radius: 50px;
+  border: none;
+  border-bottom: 3px solid #3c5a11;
+  text-transform: uppercase;
+  font-style: italic;
+  font-weight: 900;
+  outline: none;
+  transition: all .2s ease;
+  background: #83C623; }
+  .button-primary:active {
+    transform: translateY(2px);
+    border-bottom: 1px solid #000; }
+
+#cards {
+  width: 100%;
+  position: relative; }
+  #cards .cards-wrapper {
+    width: 100%;
+    /*         padding: 0 4rem; */
+    display: flex;
+    justify-content: space-evenly; }
+    #cards .cards-wrapper .landing-cards {
+      width: 300px;
+      height: auto;
+      background: lightgrey;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem 0;
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem; }
+      #cards .cards-wrapper .landing-cards .landing-image img {
+        width: 140px;
+        border-radius: 50%; }
+      #cards .cards-wrapper .landing-cards .landing-textbox {
+        display: flex;
+        flex-direction: column;
+        align-items: center; }
 
 header {
   width: 100%;
