--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -29,20 +29,14 @@ footer {
     position: relative;
 }
 
-main {
-    width: 100%;
-
-    .main-document {
-        border: solid 3px $primary-color;
-        box-shadow: 0 0 .5rem $box-shadow;
-        border-radius: .5rem;
-        padding: .5rem;
-    }
-
-}
-
 // import buttons
 @import "buttons.scss";
+
+main {
+    width: 100%;
+}
+
+
 
 #cards {
     width: 100%;
@@ -50,20 +44,55 @@ main {
 
     .cards-wrapper {
         width: 100%;
-/*         padding: 0 4rem; */
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
+        padding: $wrapperPadding;
+
+        @include mobile {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        a {
+            margin: 0 .8rem;
+
+            &:hover .button {
+                filter: brightness(1.05);
+            }
+
+            &:hover .landing-cards {
+                transform: scale(1.02);
+            }
+
+            &:active .button {
+                transform: translateY(2px);
+                border-bottom: 1px solid #000;
+            }
+            
+            @include mobile {
+                margin: .8rem 0;
+            }
+        }
         
         .landing-cards { 
-            width: 300px;
-            height: auto;
-            background: lightgrey;
+            width: $landingCardsWidth;
+            height: $landingCardsHeight;
+/*             height: auto; */
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 1rem 0;
-            border-top-left-radius: 1rem;
-            border-top-right-radius: 1rem;
+          /*   margin: 0 .8rem; */
+            border-top-left-radius: 2rem;
+            border-top-right-radius: 2rem;
+            border-bottom-left-radius: .5rem;
+            border-bottom-right-radius: .5rem;
+            box-shadow: $box-shadow;
+            transition: transform 0.2s ease;
+
+            @include mobile {
+                width: $landingCardsWidth_Mobile;
+            }
             
             .landing-image {
 
@@ -77,6 +106,11 @@ main {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+
+                h3 {
+                    padding: 1rem .5rem;
+                    text-align: center; /* ändra? text ska inte vara centrerad för det försämrar UX */ 
+                }
             }
 
         }
