--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,62 @@
 header {
     width: 100%;
     position: relative;
+    background: $primary-color;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+    .header-wrapper{
+            height: 50vh;
+            display: flex;
+            align-items: center;
+            color: #fff;
+        .header-video{
+            position:absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 50vh;
+            overflow: hidden;
+            video{
+                max-width: 100%;
+                min-height: 100%;
+            }
+
+        }
+        .header-hero {
+            z-index:2 ;
+            padding-right: 20rem;
+            padding-left: 20rem;
+            clip-path: polygon(0% 0% 10% 0%);
+            h1{
+                font-size: 40px;
+                margin-bottom: 1rem;
+                font-family: 'poppins';
+            }
+            p{
+                font-size: 1.2rem;
+                display: block;
+                padding-bottom: 2rem;
+                font-family: 'poppins';
+            }
+        }
+        .header-overlay {
+            height: 50vh;
+            width: 100vw;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: #225470;
+            z-index: 1;
+            opacity: 0.6;
+
+        }
+        .header-hero{
+           margin: auto;
+           text-align: center;
+
+        }
+    }
 }
+@media(max-width:830px){
+    video{
+       min-width: 90vh;
+    }
