--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "base.scss";
 
 // Alla gruppmedlemmars uppgifter
+@import 'navbar.scss';
 @import 'header.scss';
 @import 'item-list.scss';
 @import 'payment.scss';
