--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -10,6 +10,7 @@ footer {
         justify-content: space-between;
         height: 16rem;
         margin: 0 5rem;
+        border: 2px solid red;
     }
 
     .footer-wrapper-box1 {
