--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -17,6 +17,10 @@ header {
             video{
                 max-width: 100%;
                 min-height: 100%;
+
+                @include mobile {
+                min-width: 110vh; 
+                }
             }
         }
         .header-hero {
@@ -44,7 +48,7 @@ header {
             left: 0;
             background: #225470;
             z-index: 1;
-            opacity: 0.6;
+            opacity: 0.7;
 
         }
         .header-hero{
@@ -55,7 +59,5 @@ header {
     }
 }
 @media(max-width:830px){
-    video{
-       min-width: 90vh;
-    }
+    
 }
