--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,8 +1,12 @@
 footer {
     margin: 0%;
     
-    height: 16rem;
+    height: 17rem;
     background-color: #F2F0EC;
+
+    @include mobile {
+        
+    }
 
     .footer-wrapper {
         display: flex;
@@ -16,10 +20,30 @@ footer {
         ul {
     padding: 1rem;
     flex-direction: column;
-
-    }
+    font-size: 1.2rem;
+    
     li {
         padding: .5rem 0;
+
     }
     }
+    }
+
+    .footer-bottum {
+        background: rgba(202, 197, 192, 0.514);
+        color: rgb(88, 88, 88);
+        height: 3rem;
+        width: 100%;
+        text-align: left;
+        position: absolute;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        bottom: 0;
+        left: 0;
+       padding: 1rem 5rem 0;
+        font-size: 1.1rem;
+        box-shadow: 3px rgb(49, 48, 48);
+    }
+    
 }
