--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,8 +4,8 @@ $primary-color: #83C623;
 $primary-color-dark: #3c5a11;
 
 // color palette färgerna
-$grey-color:#c6c5b9;
-$greygreen-color:#629e76;
+$gray-color:#f1f1f1;
+$graygreen-color:#629e76;
 $darkgreen-color:#4a7c64;
 
 // backgrounds och shadows
@@ -24,3 +24,12 @@ $landingCardsHeight: 320px;
 $mobile-width: 420px;
 $tablet-width: 768px;
 $desktop-width: 1024px;
+
+
+// Product colors 
+
+$color-white: #fff;
+$color-gray: #919191;
+$color-black: #000;
+$color-blue: #2552f7;
+$color-orange: #ff7b08;
