--- a/sass/_detail-page.scss
+++ b/sass/_detail-page.scss
@@ -38,11 +38,21 @@
                 top: 1rem;
                 left: 1rem;
 
+                @include mobile {
+                    top: 2rem;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
+
                 a {
                     font-size: 1rem;
                     color: $primary-color;
                     font-weight: 900;
                     font-style: italic;
+
+                    @include mobile {
+                        font-size: 1.5rem;
+                    }
                 }
             }
 
@@ -201,6 +211,7 @@
                             font-size: 1rem;
                             text-align: center;
                             color: #000;
+                            border-radius: 25px;
                         }
                         h4 {
                             font-weight: 600;
@@ -287,7 +298,7 @@
                                 border: 3px solid;
                                 border-radius: 50%;
                                 transition: padding 250ms;
-                                color: #000;
+                                /* color: #000; */
                             }
                         }
                     
@@ -326,22 +337,42 @@
     // attributes
     [data-color="white"] {
         background: $color-white;
+
+        &:after {
+            color: $color-black;
+        }
   }
 
     [data-color="gray"] {
         background: $color-gray;
+
+        &:after {
+            color: $color-gray;
+        }
   }
 
     [data-color="black"] {
         background: $color-black;
+
+        &:after {
+            color: $color-black;
+        }
   }
 
     [data-color="blue"] {
         background: $color-blue;
+
+        &:after {
+            color: $color-blue;
+        }
   }
 
     [data-color="orange"] {
         background: $color-orange;
+
+        &:after {
+            color: $color-orange;
+        }
   }
 
 }
