about page merged and touched upon to avoid 3rd-party libs

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -19,7 +19,8 @@ footer {
         
 
         @include mobile {          
-        flex-direction: column;             
+        flex-direction: column;  
+        height: auto;           
     }
  
     .footer-wrapper-box1 {
