added a small variable

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,6 +12,7 @@ $darkgreen-color:#4a7c64;
 $primary-color: #83C623;
 $background-color: #fff;
 $box-shadow: 0 .12rem .5rem #0000003d;
+$box-shadow-2: 0 4px 6px #0000003d;
 
 
 // widths, paddings och margins
