--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -4,6 +4,7 @@ html, body {
     width: 100%;
     background: $background-color;
     font-family: 'Source Sans Pro', sans-serif;
+    scroll-behavior: smooth;
 }
 
 * {
@@ -15,11 +16,17 @@ html, body {
 a {
     text-decoration: none;
     color: inherit;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 img {
     width: 100%;
     height: 100%;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 ul, li {
@@ -114,7 +121,7 @@ main {
 
                 h3 {
                     font-size: 1rem;
-                    padding: 1rem .5rem;
+                    padding: 1rem;
                     text-align: center; /* ändra? text ska inte vara centrerad för det försämrar UX */ 
                 }
             }
