pushed up for Rakib to check

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,7 @@ html, body {
     background: $background-color;
     font-family: 'Source Sans Pro', sans-serif;
     scroll-behavior: smooth;
+    /* overflow-x: hidden; */
 }
 
 * {
