--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,7 +1,7 @@
 nav {
     width: 100%;
     z-index: 2;
-    position: fixed;
+    // position: fixed;
 
     .nav-wrapper {
         background: #f2f0ec;
