--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,7 @@
 // primär färgen för knappar / utstickande och klickbara saker
 $primary-color: #83C623;
 $primary-color-dark: #3c5a11;
-
+$error-color: #ff3939;
 // color palette färgerna
 $gray-color:#f1f1f1;
 $graygreen-color:#629e76;
