--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,5 +11,6 @@
 @import 'item-list.scss';
 @import 'checkout.scss';
 @import 'footer.scss';
+@import 'faktura.scss';
 
 @import "detail-page.scss";
