--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,7 +15,7 @@ header {
             height: 60vh;
             overflow: hidden;
             video{
-                max-width: 100%;
+                min-width: 100%;
                 min-height: 100%;
 
                 @include mobile {
