--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,12 @@
 // Variables först för att alla andra filer 
-// ska kunna ha använding av variablarna.
+// ska kunna ha användning av variablarna.
 @import "variables.scss";
 @import "mixins.scss";
+
 // grundpelarna på hemsidan. (html, body, ul a och mera).
 @import "base.scss";
 
-// Alla gruppmedlemmars uppgifter
+// Uppdelade scss filer för varje page.
 @import 'navbar.scss';
 @import 'header.scss';
 @import 'item-list.scss';
