--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -138,6 +138,10 @@ main {
     width: 100%;
     padding: 5rem;
 
+    @include mobile {
+        padding: 5rem 1rem;
+    }
+
         .about-wrapper { 
         width: 100%;
 
@@ -210,7 +214,7 @@ main {
                 display: inline-block;
                 width: 300px;
                 height: 300px;
-                background: #83C623;
+                background: none;
                 clip-path: circle(39.7% at 50% 50%);
             }
         }
@@ -246,6 +250,133 @@ main {
     }
 }
 
+#printee {
+    position: relative;
+    width: 100%;
+    min-height: 50vh;
+    padding: 3rem 0;
+
+    .printee-wrapper {
+        position: relative;
+        height: 70vh;
+        display: flex;
+        justify-content: center;
+
+        @include mobile {
+            height: auto;
+        }
+
+        .printee-container {
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+
+            @include mobile {
+                flex-direction: column;
+            }
+
+            div {
+                padding: 0 1rem;
+            }
+
+
+            .printee-text {
+                width: 50%;
+
+                @include mobile {
+                    width: 80%;
+                    margin: 0 auto;
+                }
+
+                h2 {
+                    font-size: 3rem;
+                    font-style: italic;
+                }
+
+                p {
+                    padding: .5rem 0;
+
+                    @include mobile {
+                        padding: 0.2rem 0;
+                    }
+                }
+
+            }
+
+            .printee-image {
+                position: relative;
+                width: 300px;
+
+                @include mobile {
+                    width: 200px;
+                    padding: 2rem 0;
+                }
+
+                img {
+                    position: relative;
+                    z-index: 3;
+                    animation: tshirt-effect 5s ease-in-out infinite;
+                }
+
+                .printee-img-bg {
+                    z-index: 0;
+                    position: absolute;
+                    width: 320px;
+                    height: 200px;
+                    top: 50%;
+                    left: 50%;
+                    background: $primary-color;
+                    transform: translate(-50%, -50%);
+                    clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+                    animation: bg-slider 10s ease-in-out infinite;
+
+                    @include mobile {
+                        width: 200px;
+                        height: 100px;
+                    }
+                }
+            }
+
+        }
+    }
+
+    @keyframes bg-slider {
+        0% {
+            left: 40%;
+        }
+
+        80% {
+            left: 60%;
+        }
+
+        100% {
+            left: 40%;
+        }
+    }
+    @keyframes tshirt-effect {
+        0% {
+            transform: translateY(0);
+        }
+
+        25% {
+            transform: translateY(.5rem);
+        }
+
+        50% {
+            transform: translateY(0);
+        }
+        75% {
+            transform: translateY(.5rem);
+        }
+
+
+        100% {
+            transform: translateY(0);
+        }
+    }
+}
+
+
 #contact {
     width: 100%;
     position: relative;
@@ -255,9 +386,10 @@ main {
 
         .contact-container {
             position: relative;
-            padding: 3rem 5rem;
+            padding: 2rem 3rem;
             height: 80vh;
             display: flex;
+            justify-content: center;
             align-items: center;
 
             @include tablet {
@@ -279,6 +411,7 @@ main {
                 @include tablet {
                     flex-direction: column;
                     align-items: center;
+                    width: 100%;
                 }
 
                 @include mobile {
@@ -302,6 +435,7 @@ main {
 
                     p {
                         width: 70%;
+                        padding: .2rem 0 .5rem 0;
 
                         @include tablet {
                             margin:0 auto;
@@ -313,6 +447,23 @@ main {
                         }
                     }
 
+                    ul {
+                        padding: 1rem 2rem;
+                    }
+
+                    ul, li {
+                        list-style-type: disc;
+                        font-style: italic;
+                        opacity: 0.9;
+
+                        @include tablet {
+                            list-style-type: none;
+                        }
+                        @include mobile {
+                            list-style-type: none;
+                        }
+                    }
+
 
 
                     .contact-title {
@@ -321,17 +472,91 @@ main {
                         h1 {
                             font-size: 4rem;
                             text-transform: uppercase;
+                            font-style: italic;
+                            animation: fadeInFromAbove 1.5s ease;
+                        }
+                    }
+
+                    .contact-title-text {
+                        animation: fadeInFromAbove 1.8s ease;
+                    }
+
+                    .contact-jobs-div {
+                        animation: fadeInFromAbove 1.5s ease;
+
+                    }
+
+
+
+                    h2 {
+                        padding-left: .5rem;
+                        font-size: 3rem;
+                        text-transform: uppercase;
+                        font-style: italic;
+                    }
+
+                    .contact-button {
+                        padding-left: 1rem;
+                        animation: fadeInFromLeftSide 1s ease;
+
+                        @include tablet {
+                            padding-left: 0;
+                        }
+
+                        @include mobile {
+                            padding-left: 0;
                         }
                     }
                 }
 
                 #map {
-                    width: 330px;
+                    position: relative;
+                    width: 310px;
                     height: 260px;
                     box-shadow: $box-shadow;
                     border: dashed 5px $primary-color;
+                    animation: fadeInFromRightSide 1s ease;
                 }
             }
+        }
+    }
+
+    @keyframes fadeInFromAbove {
+
+        0% {
+            opacity: 0;
+            transform: translateY(-4rem);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    @keyframes fadeInFromLeftSide {
+
+        0% {
+            opacity: 0;
+            transform: translateX(-100%);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+
+    @keyframes fadeInFromRightSide {
+
+        0% {
+            opacity: 0;
+            transform: translateX(100%);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateX(0);
         }
     }
 }
