--- a/sass/_detail-page.scss
+++ b/sass/_detail-page.scss
@@ -5,6 +5,10 @@
     .detail-wrapper {
         // lägg till padding om så
         padding: 4rem 0;
+
+        @include mobile {
+            padding: 6rem 0 4rem 0;
+        }
         
         .detail-container {
             // en extra div för styling
@@ -39,7 +43,7 @@
                 left: 1rem;
 
                 @include mobile {
-                    top: 2rem;
+                    top: 3rem;
                     left: 50%;
                     transform: translate(-50%, -50%);
                 }
