--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -29,7 +29,7 @@ header {
             padding-left: 2rem;
             clip-path: polygon(0% 0% 10% 0%);
             h1{
-                font-size: 40px;
+                font-size: 1.7rem;
                 margin-bottom: 1rem;
                 font-family: 'poppins';
             }
